correcion estilos tabla administracion dropdown y planetas

--- a/tecolotl-web/src/main/webapp/resources/css/dashboard.css
+++ b/tecolotl-web/src/main/webapp/resources/css/dashboard.css
@@ -369,3 +369,32 @@ input:checked + .slider:before {
 .boton-inhabilitado:hover{
 	cursor: initial;
 }
+
+/*scroll barra lateral izquierda*/
+.scroll-nav-left::-webkit-scrollbar {
+	width: 4px;     /* Tamaño del scroll en vertical */
+	height: 40px;    /* Tamaño del scroll en horizontal */
+}
+.scroll-nav-left::-webkit-scrollbar-thumb {
+	background: #ccc;
+	border-radius: 4px;
+}
+/* Cambiamos el fondo y agregamos una sombra cuando esté en hover */
+.scroll-nav-left::-webkit-scrollbar-thumb:hover {
+	background: #b3b3b3;
+	box-shadow: 0 0 2px 1px rgba(0, 0, 0, 0.2);
+}
+/* Cambiamos el fondo cuando esté en active */
+.scroll-nav-left::-webkit-scrollbar-thumb:active {
+	background-color: #999999;
+}
+
+.scroll-nav-left::-webkit-scrollbar-track {
+	background: #e1e1e1;
+	border-radius: 4px;
+}
+/* Cambiamos el fondo cuando esté en active o hover */
+.scroll-nav-left::-webkit-scrollbar-track:hover,
+.scroll-nav-left::-webkit-scrollbar-track:active {
+	background: #d4d4d4;
+}
