--- a/tecolotl-web/src/main/webapp/template/administracion/barras-menu.xhtml
+++ b/tecolotl-web/src/main/webapp/template/administracion/barras-menu.xhtml
@@ -5,6 +5,7 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
+<h:panelGroup layout="block" rendered="#{request.isUserInRole('administrador')}">
 <h5 class="uk-text-uppercase uk-margin-small-left">#{administracion['dashboard.days.licences']}</h5>
     <h:panelGroup id="estatus-escuelas" style="max-height: 180px; overflow: auto;" layout="block" rendered="#{request.isUserInRole('administrador')}" styleClass="left-content-box scroll-nav-left uk-margin-top">
         <ui:repeat value="#{estatusControlador.licenciaVistaModeloLista}" var="licenciaVistaModelo">
@@ -24,4 +25,5 @@
             </h:panelGroup>
         </ui:repeat>
     </h:panelGroup>
+</h:panelGroup>
 </html>
