mensaje de ayuda tabla alumnos modulo coordinador y tabla alumnos modulo profesor

--- a/tecolotl-web/src/main/webapp/resources/css/coordinador/estilo-general.css
+++ b/tecolotl-web/src/main/webapp/resources/css/coordinador/estilo-general.css
@@ -37,7 +37,8 @@ h1 {
     top: 2px;
 }
 .ayuda-imagen {
-    width: 25px;
+    width: 20px;
+    margin-left: 5px;
     transition:transform linear 0.3s;
 }
 .ayuda-imagen path,.ayuda-imagen circle{
