--- a/tecolotl-web/src/main/webapp/resources/css/tablas.css
+++ b/tecolotl-web/src/main/webapp/resources/css/tablas.css
@@ -1,17 +1,17 @@
 .boton-paginacion-anterior-admid:enabled {
-    background-image: url('#{resource["img/boton/anterior-habilitado.svg"]}');
+    background-image: url("https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/boton/anterior-habilitado.svg");
 }
 
 .boton-paginacion-anterior:enabled {
-    background-image: url('#{resource["img/boton/anterior-habilitado.svg"]}');
+    background-image: url("https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/boton/anterior-habilitado.svg");
 }
 
 .boton-paginacion-anterior-admin:disabled {
-    background-image: url('#{resource["img/boton/anterior-deshabilitado.svg"]}');
+    background-image: url("https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/boton/anterior-deshabilitado.svg");
 }
 
 .boton-paginacion-anterior:disabled {
-    background-image: url('#{resource["img/boton/anterior-deshabilitado.svg"]}');
+    background-image: url("https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/boton/anterior-deshabilitado.svg");
 }
 
 .boton-paginacion {
@@ -20,55 +20,55 @@
 }
 
 .boton-paginacion-siguiente-admin:enabled {
-    background-image: url('#{resource["img/boton/siguiente-habilitado.svg"]}');
+    background-image: url("https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/boton/siguiente-habilitado.svg");
 }
 
 .boton-paginacion-siguiente:enabled {
-    background-image: url('#{resource["img/boton/siguiente-habilitado.svg"]}');
+    background-image: url("https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/boton/siguiente-habilitado.svg");
 }
 
 .boton-paginacion-siguiente-admin:disabled {
-    background-image: url('#{resource["img/boton/siguiente-deshabilitado.svg"]}');
+    background-image: url("https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/boton/siguiente-deshabilitado.svg");
 }
 
 .boton-paginacion-siguiente:disabled {
-    background-image: url('#{resource["img/boton/siguiente-deshabilitado.svg"]}');
+    background-image: url("https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/boton/siguiente-deshabilitado.svg");
 }
 
 .boton-paginacion-primera-admin:enabled {
-    background-image: url('#{resource["img/boton/primero-habilitado.svg"]}');
+    background-image: url("https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/boton/primero-habilitado.svg");
 
 
 }
 
 .boton-paginacion-primera:enabled {
-    background-image: url('#{resource["img/boton/primero-habilitado.svg"]}');
+    background-image: url("https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/boton/primero-habilitado.svg");
 }
 
 .boton-paginacion-primera-admin:disabled {
-    background-image: url('#{resource["img/boton/primero-deshabilitado.svg"]}');
+    background-image: url("https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/boton/primero-deshabilitado.svg");
 }
 
 .boton-paginacion-primera:disabled {
-    background-image: url('#{resource["img/boton/primero-deshabilitado.svg"]}');
+    background-image: url("https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/boton/primero-deshabilitado.svg");
     }
 
 .boton-paginacion-ultima-admin:enabled {
-    background-image: url('#{resource["img/boton/ultimo-habilitado.svg"]}');
+    background-image: url("https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/boton/ultimo-habilitado.svg");
 
 }
 
 .boton-paginacion-ultima:enabled {
-    background-image: url('#{resource["img/boton/ultimo-habilitado.svg"]}');
+    background-image: url("https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/boton/ultimo-habilitado.svg");
 }
 
 .boton-paginacion-ultima-admin:disabled {
-    background-image: url('#{resource["img/boton/ultimo-deshabilitado.svg"]}');
+    background-image: url("https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/boton/ultimo-deshabilitado.svg");
 
 }
 
 .boton-paginacion-ultima:disabled {
-    background-image: url('#{resource["img/boton/ultimo-deshabilitado.svg"]}');
+    background-image: url("https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/boton/ultimo-deshabilitado.svg");
 }
 
 .module {
