desactivaron botones modulo profesro y de cambiaron las imagenes y se desactivaron botones en el modulo administracion

--- a/tecolotl-web/src/main/webapp/resources/css/dashboard.css
+++ b/tecolotl-web/src/main/webapp/resources/css/dashboard.css
@@ -398,3 +398,5 @@ input:checked + .slider:before {
 .scroll-nav-left::-webkit-scrollbar-track:active {
 	background: #d4d4d4;
 }
+
+/*boton desactivado*/
