estilos vista heredar alumnos

--- a/tecolotl-web/src/main/webapp/resources/css/letra.css
+++ b/tecolotl-web/src/main/webapp/resources/css/letra.css
@@ -15,7 +15,10 @@
 }
 
 .letra-titulo{
-    color:white;
+    color:white !important;
+}
+table  th.letra-titulo{
+    font-weight: bolder !important;
 }
 
 .letra-desabilitada-negra:disabled {
