--- a/tecolotl-web/src/main/webapp/resources/css/error.css
+++ b/tecolotl-web/src/main/webapp/resources/css/error.css
@@ -48,3 +48,8 @@ input{
     text-decoration: none;
     text-transform: uppercase;
 }
+@media screen and (max-width: 1024px){
+    p{
+        font-size: 18px;
+    }
+}
