--- a/tecolotl-web/src/main/webapp/template/administracion/footer.xhtml
+++ b/tecolotl-web/src/main/webapp/template/administracion/footer.xhtml
@@ -32,5 +32,6 @@
 <h:outputScript library="js" name="uikit.js"/>
 <h:outputScript library="js" name="uikit-icons.js"/>
 <h:outputScript rendered="#{request.isUserInRole('coordinador')}" library="js" name="/profesor/licencia.js"/>
+<h:outputScript rendered="#{request.isUserInRole('administrador')}" library="js" name="/administracion/barras-lateral.js"/>
 
 </html>
