--- a/tecolotl-web/src/main/webapp/resources/css/estilos-landing.css
+++ b/tecolotl-web/src/main/webapp/resources/css/estilos-landing.css
@@ -506,74 +506,75 @@ aside ul > li > a > img {
     border-radius: 8px;
     margin-left: 45px;
     margin-right: 45px;
-}
-#seccion3 >  div:first-child{
-    /* padding-top: 60px; */
-   display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-content: center;
-}
-#seccion3 >  div:first-child> div{
-    width: 90%;
-    height: 90%;
-    border-radius: 13px;
-}
-
-#seccion3 > div:first-child > div > div{
-    height: 16.6%;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-}
-
-#seccion3 > div:first-child > div > div > img{
-    width: 15%;
-    margin-left: 30px;
-}
-
-#seccion3 > div:first-child > div > div > input{
-    height: 55px;
-    /* display: inline-flex; */
-    /*background-color: var(--morado-secundario);*/
-    width: 60%;
-    border-radius: 8px;
     font-family: oswaldbold, sans-serif;
-    font-size: 16px;
-    /*text-transform: uppercase;*/
+}
+#seccion3 > div:first-child{
+    padding: 15px;
+    align-self: center;
+}
+#seccion3 > div:last-child{
+    align-self: center;
+}
+#seccion3 form > div{
+    margin-bottom: 25px;
+}
+#seccion3 form > div:not(.contenedor-input){
+    display: grid;
+    grid-template-columns: 50% 50%;
+}
+#seccion3 label{
+    display:inline-block;
+    font-weight: bold;
+    font-size: 18px;
+    color: white;
+}
+.input-nombre input{
+    box-sizing: border-box;
+    width: 49%;
+}
+#seccion3 input,#seccion3 select{
+    display: inline-block;
+    padding: 5px 3px;
+    border-radius: 8px;
+    font-family: inherit;
+    font-size: 18px;
+}
+#seccion3 button{
+    height: 55px;
+    background-color: var(--morado-secundario);
+    width: 40%;
+    border-radius: 8px;
+    font-size: 20px;
+    font-family: inherit;
+    text-transform: uppercase;
     border: 3px solid white;
-}
-#seccion3 > div:first-child > div > div > div{
-  height: 55px;
-  background-color: var(--morado-secundario);
-  width: 40%;
-  border-radius: 8px;
-  font-family: oswaldbold, sans-serif;
-  font-size: 20px;
-  text-transform: uppercase;
-  border: 3px solid white;
-  color: white;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-#seccion3 > div:last-child  {
+    color: white;
     display: flex;
-    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
+    margin-right: auto;
+    margin-left: auto;
 }
-
-#seccion3 > div:last-child  > div {
-    width: 90%;
-    height: 90%;
+#seccion3 button:hover{
+    cursor: pointer;
 }
-
-
-#seccion3 div:last-child svg{
-    width:100%;
-    height:100%;
+.contenedor-input{
+    display: grid;
+    grid-template-columns: 50% 50%;
+    grid-template-areas: "label inputs";
+}
+.contenedor-input > label{
+    grid-area: label;
+}
+.contenedor-input > div{
+    grid-area: inputs;
+}
+.contenedor-input div input:not([type=checkbox]),.contenedor-input div select{
+    width: 100%;
+}
+.enlaces-redes{
+    text-align: left;
+    margin-bottom: 3px;
 }
 
 /*fin seccion 3*/
@@ -726,11 +727,6 @@ aside ul > li > a > img {
 }
 
 @media screen and (max-width: 1281px){
-    #seccion3> div:first-child > div > div > div{
-        font-size: 19px;
-        height: 47px;
-        width: 37%;
-    }
     aside ul > li {
         width: 54px;
         height: 54px;
@@ -739,9 +735,7 @@ aside ul > li > a > img {
         width: 40px;
         height: 40px;
     }
-    #seccion3 > div:first-child > div > div > input {
-        height: 50px;
-    }
+
 }
 
 @media screen and (max-width: 1000px){
@@ -755,10 +749,7 @@ aside ul > li > a > img {
         font-size: 20px;
         line-height: 30px;
     }
-    #seccion3> div:first-child > div > div > div{
-        font-size: 13px;
-        text-align: center;
-    }
+
 }
 
 /*@media screen and (max-width: 768px){*/
@@ -777,10 +768,7 @@ aside ul > li > a > img {
         font-size: 20px;
         line-height: 30px;
     }
-    #seccion3> div:first-child > div > div > div{
-        font-size: 13px;
-        text-align: center;
-    }
+
 
     header ul > li{
         font-size: 11px;
@@ -915,38 +903,16 @@ aside ul > li > a > img {
     #seccion3{
         height: auto;
         grid-template-columns: 100%;
-        grid-template-rows: auto 300px;
+        grid-template-rows: auto;
         margin-left: 0;
         margin-right: 0;
         border-radius: initial;
         padding-top: 20px;
     }
 
-    #seccion3 > div:first-child > div > div{
-        height: 20%;
-        display: flex;
-        flex-wrap: wrap;
-        align-items: center;
-        flex-direction: column;
-    }
 
-    #seccion3> div:first-child > div > div > input{
-        order: 2;
-        height: 35px;
-        margin-bottom: 10px;
-        font-size: 12px;
 
-    }
-    #seccion3 > div:first-child > div > div > img{
-        margin-left: 0;
-        margin-bottom: 10px;
-        order: 1;
-    }
 
-    #seccion3 > div:first-child > div > div > div{
-      height: 35px;
-      margin-top: 10px;
-    }
 
     #seccion4{
         height: auto;
@@ -1024,10 +990,7 @@ aside ul > li > a > img {
         width: 12%;
     }
 
-    #seccion3 div:last-child{
-        height: 200px;
 
-    }
 
 
 }
@@ -1035,5 +998,8 @@ aside ul > li > a > img {
 @media screen and (max-width: 600px){
     footer > div{
         height:70%;
+    }
+    .input-nombre input {
+        width: 100%;
     }
 }
