se agrega formulario landing y estilos vista administracion heredar-alumno.xhtml

--- a/tecolotl-web/src/main/webapp/resources/css/dashboard.css
+++ b/tecolotl-web/src/main/webapp/resources/css/dashboard.css
@@ -400,3 +400,12 @@ input:checked + .slider:before {
 }
 
 /*boton desactivado*/
+
+
+/*tabla modulo administracion checkbox*/
+.tabla-checkbox tr{
+display: block;
+}
+.tabla-checkbox td{
+display: table-row;
+}
