vista heredar estilos y funcion para seleccionar grupo a heredar

--- a/tecolotl-web/src/main/webapp/resources/css/dashboard.css
+++ b/tecolotl-web/src/main/webapp/resources/css/dashboard.css
@@ -484,6 +484,9 @@ display: table-row;
 .cargando-grupo .contorno,.cargando-grupo .centro{
 	stroke: #0e6dcd;
 }
+.seleccion-heredar:focus{
+	border-width: 3px;
+}
 
 .ver-svg{
 	display: none;
