--- a/tecolotl-web/src/main/webapp/resources/css/graficas.css
+++ b/tecolotl-web/src/main/webapp/resources/css/graficas.css
@@ -60,7 +60,8 @@ div > ul + div > div > div > span{
             -webkit-linear-gradient(top,
             rgba(255, 255, 255, .25),
             rgba(0, 0, 0, .25)),
-            -webkit-linear-gradient(left, rgba(238,2,2,1), rgba(39, 174, 96,1));
+            /*-webkit-linear-gradient(left, rgba(238,2,2,1), rgba(39, 174, 96,1));*/
+            -webkit-linear-gradient(left, rgba(0, 153, 204,1), rgba(255, 68, 68,1));
 
     border-radius: 2px;
     background-size: 35px 20px, 100% 100%, 100% 100%;
