--- a/tecolotl-web/src/main/webapp/resources/sass/components/_card.scss
+++ b/tecolotl-web/src/main/webapp/resources/sass/components/_card.scss
@@ -13,6 +13,7 @@ activity-C1: "C1" $level-C1,
   display: none;
   content: none;
 }
+
 %card-letter{
   font-family: 'Sniglet', "Arial Black", sans-serif;
   font-weight: bold;
@@ -30,33 +31,55 @@ activity-C1: "C1" $level-C1,
     width: 100%;
   }
 }
+.activity-theme-text:after{
+  content: "";
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 85%;
+  height: 3px;
+}
+.uk-card-footer svg{
+  display: block;
+  width: 43px;
+  height: 30px;
+}
+/*estilo card por  actividad*/
 @each $key,$var in $map-colors{
   .card-activity-#{nth($var,1)}{
       background-color: nth($var,2);
       color: nth($var,2);
     .uk-radio{
-        border-color: nth($var,2);
+        @extend %border-#{$key};
         &:checked:focus{
-          background-color:nth($var,2);
+          @extend %background-color-#{$key};
         }
      }
     .uk-checkbox{
-        border-color: nth($var,2);
+      @extend %border-#{$key};
       &:checked:focus{
-        background-color:nth($var,2);
+        @extend %background-color-#{$key};
       }
     }
     .uk-card-footer{
       svg{
-        display: block;
-        width: 43px;
-        height: 30px;
         stroke: nth($var,2);
       }
-
+    }
+    .activity-theme-text{
+      &:after{
+        @extend %background-color-#{$key};
+      }
+    }
+    %border-#{$key}{
+      border-color: nth($var,2);
+    }
+    %background-color-#{$key}{
+      background-color: nth($var,2);
     }
     @extend %card-activity;
   }
+  /*---------------------------------------*/
 }
 
 .uk-card{
