--- a/tecolotl-web/src/main/webapp/resources/sass/components/_card.scss
+++ b/tecolotl-web/src/main/webapp/resources/sass/components/_card.scss
@@ -159,3 +159,12 @@ activity-C1: "C1" $level-C1,
 .hidden-activities > div{
     display: none;
 }
+.uk-accordion-title{
+  &:before{
+    @extend %pseudo-element-uikit;
+  }
+  &:after{
+    @extend %pseudo-element-uikit;
+  }
+
+}
