--- a/tecolotl-web/src/main/webapp/resources/sass/components/_card.scss
+++ b/tecolotl-web/src/main/webapp/resources/sass/components/_card.scss
@@ -18,6 +18,10 @@ activity-C1: "C1" $level-C1,
   font-family: 'Sniglet', "Arial Black", sans-serif;
   font-weight: bold;
 }
+%hover-effect-dropdown{
+  cursor: pointer;
+  color: black;
+}
 .card-header{
   display: grid;
   grid-template-columns:1fr 3fr 1fr;
@@ -125,8 +129,10 @@ activity-C1: "C1" $level-C1,
 }
 .uk-dropdown{
   span:hover{
-    cursor: pointer;
-    color: black;
+    @extend %hover-effect-dropdown;
+  }
+  li:hover{
+    @extend %hover-effect-dropdown;
   }
 }
 .filter-activities{
