correcion estilos formulario y envio correcto de respuestas

--- a/tecolotl-web/src/main/webapp/resources/css/estilos-landing.css
+++ b/tecolotl-web/src/main/webapp/resources/css/estilos-landing.css
@@ -507,6 +507,7 @@ aside ul > li > a > img {
     margin-left: 45px;
     margin-right: 45px;
     font-family: oswaldbold, sans-serif;
+    height: auto;
 }
 #seccion3 > div:first-child{
     padding: 15px;
