--- a/tecolotl-web/src/main/webapp/resources/css/sin-permiso.css
+++ b/tecolotl-web/src/main/webapp/resources/css/sin-permiso.css
@@ -56,7 +56,7 @@ body{
 
 .imagenes-vista{
     width: 80vw;
-    height: 400px;
+    height: 380px;
     display: flex;
     justify-content: center;
 }
@@ -115,3 +115,11 @@ p > span{
     animation-timing-function: linear;
 }
 
+@media screen and (max-width: 1200px){
+    .imagenes-vista{
+        height: 300px;
+    }
+    p{
+        font-size: 32px;
+    }
+}
