enlaces profesor apuntado al storage

--- a/tecolotl-web/src/main/webapp/template/profesor/footer.xhtml
+++ b/tecolotl-web/src/main/webapp/template/profesor/footer.xhtml
@@ -29,9 +29,9 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
     </div>
 </div>
-<h:outputScript library="js" name="spinner.js"/>
-<h:outputScript library="js" name="uikit.js"/>
-<h:outputScript library="js" name="uikit-icons.js"/>
-<h:outputScript library="js" name="/profesor/licencia.js"/>
+<script type="text/javascript" src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/js/spinner.js"></script>
+<script type="text/javascript" src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/js/uikit.js"></script>
+<script type="text/javascript" src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/js/uikit-icons.js"></script>
+<script type="text/javascript" src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/js/profesor/licencia.js"></script>
 
 </html>
