--- a/tecolotl-web/src/main/webapp/template/administracion/nav1.xhtml
+++ b/tecolotl-web/src/main/webapp/template/administracion/nav1.xhtml
@@ -11,14 +11,13 @@
             <nav class="uk-navbar uk-light" data-uk-navbar="mode:click; duration: 250">
                 <div class="uk-navbar-left">
                     <div class="uk-navbar-item uk-hidden@m">
-                        <h:graphicImage library="img" name="esquadron.svg"/>
+                        <h:graphicImage url="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/esquadron.svg"/>
                         <span class="titulo-blanco uk-text-capitalize">squadron</span>
                         <h:panelGroup style="display: none" id="licencia-fecha" pt:data-licencia="#{coordinadorControladorLocal.personaActivaModelo.dias}"  rendered="#{request.isUserInRole('coordinador')}"/>
                     </div>
                     <ul class="uk-navbar-nav uk-visible@m">
                         <li>
                             <a href="#">
-
                                 <h:outputText id="escuela-seleccion"
                                               value="#{empty escuelaPoblacionControlador.claveCentroTrabajo ?
                                               escuelaPoblacionControlador.nombreEscuela :
@@ -26,33 +25,8 @@
 
                             </a>
                         </li>
-                        <!-- <li>
-                            <a href="#">Settings <span data-uk-icon="icon: triangle-down"></span></a>
-                            <div class="uk-navbar-dropdown">
-                                <ul class="uk-nav uk-navbar-dropdown-nav">
-                                    <li class="uk-nav-header">YOUR ACCOUNT</li>
-                                    <li><a href="#"><span data-uk-icon="icon: info"></span> Summary</a></li>
-                                    <li><a href="#"><span data-uk-icon="icon: refresh"></span> Edit</a></li>
-                                    <li><a href="#"><span data-uk-icon="icon: settings"></span> Configuration</a></li>
-                                    <li class="uk-nav-divider"></li>
-                                    <li><a href="#"><span data-uk-icon="icon: image"></span> Your Data</a></li>
-                                    <li class="uk-nav-divider"></li>
-                                    <li><a href="#"><span data-uk-icon="icon: sign-out"></span> Logout</a></li>
-                                </ul>
-                            </div>
-                        </li> -->
                     </ul>
                 </div>
-                <!--
-                <div class="uk-navbar-right">
-                    <ul class="uk-navbar-nav">
-                        <li><a href="#" data-uk-icon="icon:user" title="Your profile" data-uk-tooltip=""></a></li>
-                        <li><a href="#" data-uk-icon="icon: settings" title="Settings" data-uk-tooltip=""></a></li>
-                        <li><a href="#" data-uk-icon="icon:  sign-out" title="Sign Out" data-uk-tooltip=""></a></li>
-                        <li class="uk-hidden@m  "><a class="uk-navbar-toggle " data-uk-toggle="" data-uk-navbar-toggle-icon="" href="#offcanvas-nav" title="Offcanvas" data-uk-tooltip=""></a></li>
-                    </ul>
-                </div>
-                -->
             </nav>
         </div>
     </header>
