logo eventos landing

--- a/tecolotl-web/src/main/webapp/resources/css/estilos-landing.css
+++ b/tecolotl-web/src/main/webapp/resources/css/estilos-landing.css
@@ -524,6 +524,7 @@ aside ul > li > a > img {
 
 #eventos-logos div{
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-around;
     align-items: center;
 }
